Use Qt's private headers directly to access QKeyMapper on all platforms

The fix is also needed on macOS, so it will be easier just to access
the keymapper directly.

BUG:473923